# Neuron_Network

./: .gitignore  AbstractActivationFunction.h  AbstractLossFunction.h  Apply.hpp  AutogradOperations.hpp  CMakeLists.txt  Expression.hpp  ExpressionTree.cpp  ExpressionTree.h  Functions.cpp  Functions.h  Functions.hpp  GraphCalc.hpp  Layer.hpp  Network.cpp  Network.h  Network.hpp  Node.hpp  NodeTree.h  Operations.cpp  Operations.h  Operations.hpp  Tensor.hpp  const.h  main.cpp
interactor/: MCST  MCST.cpp  MCST.txt  MCSTlog.txt  Makefile  board.cpp  board.h  final.txt  game  game.cpp  interactor  interactor.cpp
